gap fix

--- a/screen.css
+++ b/screen.css
@@ -257,7 +257,7 @@ textarea:focus {
     outline: 3px black;
 }
 
-button {
+input[type="submit"] {
     background-color: #9ecfdc;
     color: #171717;
     border: 1px solid black;
@@ -269,7 +269,7 @@ button {
     box-shadow: 0 3px 6px rgba(0.5, 0.5, 0.5, 0.5);
 }
 
-input[type="submit"] {
+button {
     background-color: #9ecfdc;
     color: #171717;
     border: 1px solid black;
@@ -279,4 +279,6 @@ input[type="submit"] {
     font-size: 1rem;
     transition: background-color 0.9s ease, transform 0.3s ease;
     box-shadow: 0 3px 6px rgba(0.5, 0.5, 0.5, 0.5);
+    text-align: center;
+    gap: 50px;
 }
